# wuji-tauri

./: .env.example  .gitignore  .prettierignore  .prettierrc  README.md  app-icon.png.bak  auto-imports.d.ts  components.d.ts  eslint.config.js  eslint.config.mjs  index.html  package.json  pnpm-workspace.yaml  tailwind.config.js  test.html  test.js  tsconfig.json  vite.config.ts
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: stale.yml
scripts/: build-all-android.ps1  build-all-win.ps1
scripts/update/: .gitignore  requirements.txt  updater_android.json  updater_win.json  uploadToBinfenyun.py
src/: App.vue  MobileApp.vue  WinApp.vue  global.d.ts  main.ts  netease-cloud-music-api.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  scrap_host.json
src-tauri/icons/: icon.icns
src-tauri/permissions/fetch-plugin/: default.toml
src-tauri/permissions/proxy-plugin/: default.toml
src-tauri/permissions/websocket-plugin/: default.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/fetch/: commands.rs  mod.rs
src-tauri/src/fetch_plugin/: commands.rs  error.rs  mod.rs  scope.rs
src-tauri/src/proxy_plugin/: ad_remove.rs  commands.rs  mod.rs
src-tauri/src/websocket_plugin/: mod.rs
src/apis/: ip.ts
src/apis/hot/: apiHot.ts  index.ts
src/components/: BookShelfButton.vue  ComicShelfButton.vue  HorizonList.vue  LoadImage copy.vue  LoadImage.vue  NavBar.vue  PlatformSwitch.vue  PositionBackTop.vue  ResponsiveGrid.vue  ResponsiveGrid2.vue  SimplePagination.vue  SongShelfSideBar.vue  View.vue
src/components/actionSheets/: MoreOptions.vue  PlayingPlaylist.vue  SongSelectShelf.vue
src/components/animate/: DialogAnimate.vue  DialogWindow.vue  WTaichiAnimate.vue
src/components/button/: AddShelfButton.vue  MBookTTSButton.vue  MLoginButton.vue  SVipButton.vue  VipButton.vue  WLoginButton.vue
src/components/buttons/: MobileBookTTSButton.vue  SongToFavoriteButton.vue  WinBookTTSButton.vue
src/components/card/: BookCard.vue  PhotoCard.vue  PlaylistCard.vue  SongCard.vue
src/components/codeEditor/: Guide.vue  IEditor.vue  completions copy.ts  completions.ts  templates.ts
src/components/dialog/: BookSwitchSource.vue  ComicSwitchSource.vue  ImportSubscribeSource.vue  MarketSourceCreate.vue  MarketSourceDetail.vue  PromptDialog.vue
src/components/dialogs/: About.vue  SwitchBookSource.vue  SwitchComicSource.vue
src/components/grid/: ResponsiveGrid2.vue
src/components/header/: MHeader.vue  MNavBar.vue  WHeader.vue  WNavbar.vue
src/components/list/: HorizonList.vue  PlayingSongList.vue
src/components/media/: BrowserFullScreenButton.vue  FullScreenButton.vue  MFullScreenButton.vue  MVideoPlayer.vue  PlayNextButton.vue  PlaybackRateButton.vue  SearchDialog.vue  VideoPlayer.vue  VideoSwiper.vue  error.ts  flv-video-tech.ts
src/components/mobile/: DraggableSongBar.vue  LeftPopup.vue  MobileHeader.vue  (+3 more)
src/extensions/: baseExtension.ts
src/router/: index.ts
src/store/: backStore.ts  bookChaptersStore.ts  bookShelfStore.ts  bookStore.ts  comicShelfStore.ts  comicStore.ts  displayStore.ts  index.ts  photoShelfStore.ts  serverStore.ts  settingStore.ts  songCacheStore.ts  songShelfStore.ts  songStore.ts  sourceCreateStore.ts  store.ts  subscribeSourceStore.ts  ttsStore.ts  utils.ts  videoShelfStore.ts
src/styles/: index.css
src/types/: book.ts  comic.ts  index.ts  song.ts  sync.ts  user.ts  video.ts
src/utils/: autostart.ts  cancelableFunction.ts  device.ts  extensionUtils.ts  fetch.ts  font.ts  heartbeat.ts  index.ts  lazyload.ts  lruCache.ts  lyric.ts  marketSource.ts  permissions.ts  proxyUrl.ts  songCover.ts  sqlScript.ts  tooltip.ts  tray.ts  trycatch.ts  update.ts  usePromptDialog.ts  websocketPlugin.ts  webview.ts
tauri-plugin-commands/: .gitignore  Cargo.toml  README.md  build.rs  package.json
tauri-plugin-commands/android/: .gitignore  build.gradle.kts  local.properties
tauri-plugin-commands/guest-js/: index.ts
tauri-plugin-commands/permissions/: default.toml
tauri-plugin-commands/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-fs/: .gitignore  Cargo.toml  api-iife.js  build.rs  package.json
tauri-plugin-fs/guest-js/: index.ts
tauri-plugin-fs/permissions/autogenerated/: reference.md
tauri-plugin-fs/permissions/autogenerated/commands/: fetch_and_save.toml
tauri-plugin-fs/permissions/schemas/: schema.json
tauri-plugin-fs/src/: commands.rs  error.rs  lib.rs
tauri-plugin-mediasession/: .gitignore  Cargo.toml  README.md  build.rs  package.json
tauri-plugin-mediasession/android/: build.gradle.kts  local.properties  settings.gradle
tauri-plugin-mediasession/guest-js/: index.ts  types.ts
tauri-plugin-mediasession/permissions/: default.toml
tauri-plugin-mediasession/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-mywebview/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-mywebview/android/: build.gradle.kts  local.properties
tauri-plugin-mywebview/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-mywebview/android/src/main/: AndroidManifest.xml
tauri-plugin-mywebview/android/src/main/assets/: scraping.js  sniff_init.js  spoof.js
tauri-plugin-mywebview/android/src/main/java/: BackstageWebView.kt  CookieStore.kt  WebviewPlugin.kt  constant.kt
tauri-plugin-mywebview/android/src/main/java/coroutine/: ActivelyCancelException.kt  Coroutine.kt
tauri-plugin-mywebview/android/src/main/java/exception/: NoStackTraceException.kt
tauri-plugin-mywebview/android/src/main/java/utils/: HandlerUtils.kt
tauri-plugin-mywebview/guest-js/: index.ts
tauri-plugin-mywebview/permissions/: default.toml
tauri-plugin-mywebview/permissions/autogenerated/: reference.md
tauri-plugin-mywebview/permissions/schemas/: schema.json
tauri-plugin-mywebview/scripts/: scraping.js  sniff_init.js
tauri-plugin-mywebview/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+522 files in other folders)
