[package]
name = "wuji-app"
version = "0.1.0"
description = "一款资源聚合软件"
authors = ["moshangstudio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wuji_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
http = "1"
tauri = { version = "2", features = ["tray-icon", "image-ico", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json", "cookies", "default-tls"] }
regex = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
urlpattern = "0.3"
tauri-plugin-fs = "2.2.0"
data-url = "0.3.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
