[package]
name = "wuji-app"
version = "0.1.0"
description = "一款资源聚合软件"
authors = ["moshangstudio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wuji_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
http = "1"
tauri = { version = "2", features = ["tray-icon", "image-ico", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
# 由于您只有一个使用 OpenSSL （ReqWest） 的依赖项，因此我建议只尝试 Rustls。为此，请禁用 reqwest 的默认功能，并启用 rustls-tls（以及除 openssl 之外的其他默认功能）。
# 如果将来你需要 openssl 来连接一个不支持切换的 crate，你可以启用 reqwest 的 native-tls-vendored（以及它的默认功能，而不是上面）或 add openssl-sys = { version = "0.9", features = ["vendored"] } （基本上是一样的），它应该可以在 linux 和 macos 主机上工作。
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "http2",
  "charset",
  "macos-system-configuration",
] }
regex = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
urlpattern = "0.3"
tauri-plugin-fs = "2.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
