[package]
name = "tauri-plugin-mywebview"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mywebview"

[dependencies]
tauri = { version = "2.7.0" }
serde = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
once_cell = "1.21.3"
tauri-plugin-store = "2"
serde_json = "1"
base64 = "0.22.1"
urlencoding = "2.1.3"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
